--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">PresentationProject</string>
+    <string name="app_name">Spotlight</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="title_activity_during_presentation">DuringPresentationActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_end_presentation">EndPresentationActivity</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="title_activity_watch_statistics">WatchStatisticsActivity</string>
 </resources>
